@@ -1,4 +1,8 @@
-﻿drkns 08.02.2014 12:39:25 +0200 - build 3800
+﻿w17 11.02.2014 13:59:15 +0400 - build 3801
+
+1. Длинные имена в диалоге удаления (с форума)
+
+drkns 08.02.2014 12:39:25 +0200 - build 3800
 
 1. 0002577: Не работает сдвиг блока для строки с одним символом
 
